<resources>
    <string name="app_name">Xebia</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Parametres</string>
    <string name="transitionNameImage">image</string>
    <string name="transitionNameContent">content</string>
    <string name="transitionNameHeader">header</string>

    <string name="book">Book</string>
    <string name="transitionNameToolbar" >toolbar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu interdum nisl, at convallis lacus. Praesent luctus ligula at pulvinar imperdiet. Nam libero ex, ornare in tortor in, pulvinar rhoncus magna. Suspendisse rhoncus vel erat et tempor. Nam ullamcorper diam at eleifend scelerisque. Sed cursus placerat volutpat. Nam fringilla, nunc pulvinar tempus euismod, dui eros cursus quam, quis sollicitudin ante libero in quam. Sed interdum dolor id velit vulputate pellentesque. Pellentesque luctus sem eu sapien eleifend laoreet.</string>
    <string name="description">Description</string>
    <string name="price">Prce</string>
    <string name="commander">ORDER</string>
    <string name="remove">Retirer</string>
    <string name="de_reduction_immediate">%1$d %% of immediate reduction</string>
    <string name="euros_reduction_immediate">%1$d € of immediate reduction</string>
    <string name="par_tranche_de">%1$d € by %2$d €</string>
    <string name="email">champigny.florent@gmail.com</string>
    <string name="name">Florent Champigny</string>
    <string name="books">Books</string>
    <string name="shopping">Order</string>
</resources>
